--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <li><strong>Measurable Results:</strong> Track performance with analytics to refine strategy and measure ROI.</li>
       </ul>
     </section>
-
+      <img src="SEO.png" alt="SEO Strategy Priority" width="500">
     <section id="takeaway" class="card">
       <h2>Takeaway</h2>
       <p class="muted">SEO is an essential long-term digital marketing strategy. By combining keyword-focused content, on-page best practices, authoritative off-page signals, and solid technical foundations, you can improve search visibility, attract qualified traffic, and grow your online presence sustainably.</p>
@@ -115,4 +115,5 @@
   </div>
 </body>
 </html>
+
 
