--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>What is Search Engine Optimization (SEO)?</title>
   <meta name="description" content="Search Engine Optimization (SEO) explained — how SEO works, key components, technical SEO, benefits and long-term strategy.">
+  <meta name="google-site-verification" content="WUbhDdwBqcQrOAD9QvP_lw2aUzv__Z60tzMYTxCfhzE" />
   <style>
     :root{--bg:#ffffff;--text:#0f172a;--muted:#6b7280;--card:#f8fafc}
     *{box-sizing:border-box}
@@ -115,6 +116,7 @@
   </div>
 </body>
 </html>
+
 
 
 
