--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>What is Search Engine Optimization (SEO)?</title>
   <meta name="description" content="Search Engine Optimization (SEO) explained — how SEO works, key components, technical SEO, benefits and long-term strategy.">
   <meta name="google-site-verification" content="WUbhDdwBqcQrOAD9QvP_lw2aUzv__Z60tzMYTxCfhzE" />
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-59BTHHC3');</script>
+<!-- End Google Tag Manager -->
   <style>
     :root{--bg:#ffffff;--text:#0f172a;--muted:#6b7280;--card:#f8fafc}
     *{box-sizing:border-box}
@@ -27,11 +34,14 @@
 </head>
 <body>
   <div class="container">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59BTHHC3"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header>
       <h1>What is Search Engine Optimization (SEO)?</h1>
       <p class="lead">Search Engine Optimization (SEO) is the practice of optimizing a website and its content to rank higher in search engine results like Google, Bing, and Yahoo — with the goal of increasing organic (non-paid) traffic by making pages more visible and relevant to user queries.</p>
     </header>
-
     <nav class="card">
       <div class="toc">
         <a href="#how-it-works">How SEO Works</a>
@@ -116,6 +126,7 @@
   </div>
 </body>
 </html>
+
 
 
 
